--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -2,24 +2,25 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
-        <form method="POST">
+      <div class="media">
+        <div class="media-body">
+          <h2 class="account-heading">{{user.username}}</h2>
+          <p class="text-secondary">{{user.email}}</p>
+        </div>
+      </div>
+      <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">
-                    Join Today
+                    Profile Info
                 </legend>
-                {{ form|crispy }}
+                {{ u_form|crispy }}
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">
-                    Sign Up
+                    Update
                 </button>
             </div>
         </form>
-        <div class="border-top pt-3">
-            <small class="text-muted">
-                Already Have An Account? <a class="ml-2" href="{% url 'login' %}">Sign In</a>
-            </small>
-        </div>
     </div>
 {% endblock content %}
