--- a/budgeting/templates/budgeting/base.html
+++ b/budgeting/templates/budgeting/base.html
@@ -52,6 +52,7 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated %}
+                    <a class="nav-item nav-link" href="{% url 'transaction-create' %}">New Transaction</a>
                     <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                     <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                 {% else %}
@@ -69,7 +70,7 @@
     <main role="main" class="container">
         <div class="row">
           <div class="col-md-8">
-            {% block content %}{% endblock %}
+            {% block content %}{% endblock content%}
           </div>
           <div class="col-md-4">
             <div class="content-section">
