--- a/budgeting/templates/budgeting/transaction_detail.html
+++ b/budgeting/templates/budgeting/transaction_detail.html
@@ -19,7 +19,7 @@
         <a
           class="btn btn-danger btn-sm mt-1 mb-1"
           href="{%url 'transaction-delete' object.id %}"
-          >Update</a
+          >Delete</a
         >
       </div>
     </div>
