--- a/budgeting/templates/budgeting/transaction_form.html
+++ b/budgeting/templates/budgeting/transaction_form.html
@@ -1,11 +1,12 @@
-{% extends "budgeting/base.html" %} {% load crispy_forms_tags %} {% block
-content %}
+{% extends "budgeting/base.html" %}
+{% load crispy_forms_tags %}
+{% block content %}
 <div class="content-section">
   <form method="POST">
     {% csrf_token %}
     <fieldset class="form-group">
       <legend class="border-bottom mb-4">
-        Join Today
+        New Transaction
       </legend>
       {{ form|crispy }}
     </fieldset>
