--- a/budgeting/templates/budgeting/transaction_confirm_delete.html
+++ b/budgeting/templates/budgeting/transaction_confirm_delete.html
@@ -18,7 +18,7 @@
       </button>
       <a
         class="btn btn-outline-secondary"
-        href="{% url 'transaction-detail' object.id %}"
+        href="{% url 'transaction-detail' transaction.id %}"
       >
         Cancel
       </a>
