--- a/budgeting/templates/budgeting/transaction_form.html
+++ b/budgeting/templates/budgeting/transaction_form.html
@@ -4,7 +4,7 @@
 <div class="content-section">
   <form method="POST">
     {% csrf_token %}
-    <fieldset class="form-group">
+    <fieldset class="form-group" class="asteriskField">
       <legend class="border-bottom mb-4">
         New Transaction
       </legend>
