--- a/budgeting/templates/budgeting/home.html
+++ b/budgeting/templates/budgeting/home.html
@@ -21,10 +21,11 @@
     <article class="media content-section">
       <div class="media-body">
         <div class="article-metadata">
-          <small class="text-muted">Pls log in</small>
+            <h2>
+          Pls log in
+        </h2>
         </div>
       </div>
     </article>
 {% endif %}
-
 {% endblock content %}
