--- a/budgeting/templates/budgeting/home.html
+++ b/budgeting/templates/budgeting/home.html
@@ -3,29 +3,46 @@
 {% block content %}
 <!-- This is a for loop-->
 <!-- double braces allows us to access a variable. We use dot syntax on python dictionary in html. -->
-{% if transactions != None %}
-    {% for transaction in transactions %}
-    <article class="media content-section">
-      <div class="media-body">
-        <div class="article-metadata">
-          <a class="mr-2" href="#">{{ transaction.t_type}} from {{transaction.source}}</a>
-          <small class="text-muted">{{ transaction.date_posted|date:"F d, Y"}}</small>
+<div class="row">
+    <div class="col-md-8">
+        {% if transactions != None %}
+            {% for transaction in transactions %}
+            <article class="media content-section">
+              <div class="media-body">
+                <div class="article-metadata">
+                  <a class="mr-2" href="#">{{ transaction.t_type}} from {{transaction.source}}</a>
+                  <small class="text-muted">{{ transaction.date_posted|date:"F d, Y"}}</small>
+                </div>
+                <h2>
+                  <a class="article-title" href="{% url 'transaction-detail' transaction.id %}">${{ transaction.amount }}</a>
+                </h2>
+              </div>
+            </article>
+            {% endfor %}
+        {% else %}
+            <article class="media content-section">
+              <div class="media-body">
+                <div class="article-metadata">
+                    <h2>
+                  Pls log in
+                </h2>
+                </div>
+              </div>
+            </article>
+        {% endif %}
+    </div>
+    <div class="col-md-4">
+        <div class="content-section">
+          <h3>Our Sidebar</h3>
+          <p class='text-muted'>You can put any information here you'd like.
+            <ul class="list-group">
+              <li class="list-group-item list-group-item-light">Latest Posts</li>
+              <li class="list-group-item list-group-item-light">Announcements</li>
+              <li class="list-group-item list-group-item-light">Calendars</li>
+              <li class="list-group-item list-group-item-light">etc</li>
+            </ul>
+          </p>
         </div>
-        <h2>
-          <a class="article-title" href="{% url 'transaction-detail' transaction.id %}">${{ transaction.amount }}</a>
-        </h2>
-      </div>
-    </article>
-    {% endfor %}
-{% else %}
-    <article class="media content-section">
-      <div class="media-body">
-        <div class="article-metadata">
-            <h2>
-          Pls log in
-        </h2>
-        </div>
-      </div>
-    </article>
-{% endif %}
+    </div>
+</div>
 {% endblock content %}
