--- a/budgeting/templates/budgeting/transaction_form.html
+++ b/budgeting/templates/budgeting/transaction_form.html
@@ -6,7 +6,7 @@
     {% csrf_token %}
     <fieldset class="form-group" class="asteriskField">
       <legend class="border-bottom mb-4">
-        New Transaction
+        {{ title }}
       </legend>
       {{ form|crispy }}
     </fieldset>
