--- a/budgeting/templates/budgeting/base.html
+++ b/budgeting/templates/budgeting/base.html
@@ -20,9 +20,9 @@
     <link rel="stylesheet"  href="{% static 'blog/main.css'%}">
 
     {% if title %}
-    <title>TreatYoSelf- {{title}}</title>
+    <title>Treat Yo Self- {{title}}</title>
     {% else %}
-    <title>TreatYoSelf</title>
+    <title>Treat Yo Self</title>
     {% endif %}
   </head>
   <!-- end of head -->
@@ -31,7 +31,7 @@
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="/">TreatYoSelf</a>
+          <a class="navbar-brand mr-4" href="/">Treat Yo Self</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -48,11 +48,14 @@
                 <!--we take the name of the urls in the urls.py module-->
               <a class="nav-item nav-link" href="{% url 'budgeting-home'%}">Home</a>
               <a class="nav-item nav-link" href="{% url 'budgeting-about'%}">About</a>
+                {% if user.is_authenticated %}
+                    <a class="nav-item nav-link" href="{% url 'budgeting-about'%}">Transactions</a>
+                    <a class="nav-item nav-link" href="{% url 'budgeting-about'%}"></a>
+                {% endif %}
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated %}
-                    <a class="nav-item nav-link" href="{% url 'transaction-create' parameter='Deposit' %}">New Transaction</a>
                     <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                     <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                 {% else %}
@@ -68,6 +71,7 @@
     <!-- this block is called content (name we chose)-->
     <!-- div gives us some nice spacing/margin padding-->
     <main role="main" class="container">
+        <!-- Main Transaction list -->
         {% block content %}{% endblock content%}
     </main>
 
@@ -88,5 +92,6 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+
   </body>
 </html>
