--- a/budgeting/templates/budgeting/home.html
+++ b/budgeting/templates/budgeting/home.html
@@ -3,44 +3,84 @@
 {% block content %}
 <!-- This is a for loop-->
 <!-- double braces allows us to access a variable. We use dot syntax on python dictionary in html. -->
-<div class="row">
-    <div class="col-md-8">
-        {% if transactions != None %}
-            {% for transaction in transactions %}
-            <article class="media content-section">
-              <div class="media-body">
-                <div class="article-metadata">
-                  <a class="mr-2" href="#">{{ transaction.t_type}} from {{transaction.source}}</a>
-                  <small class="text-muted">{{ transaction.date_posted|date:"F d, Y"}}</small>
-                </div>
-                <h2>
-                  <a class="article-title" href="{% url 'transaction-detail' transaction.id %}">${{ transaction.amount }}</a>
-                </h2>
-              </div>
-            </article>
-            {% endfor %}
-        {% else %}
-            <article class="media content-section">
-              <div class="media-body">
-                <div class="article-metadata">
-                    <h2>
-                  Pls log in
-                </h2>
-                </div>
-              </div>
-            </article>
-        {% endif %}
-    </div>
-    <div class="col-md-4">
-        <div class="content-section">
-          <h3>Our Sidebar</h3>
-          <p class='text-muted'>You can put any information here you'd like.
-            <ul class="list-group">
-            <li class="list-group-item list-group-item-light"><a href="{% url 'transaction-create' parameter='Deposit' %}">Deposit</a></li>
-              <li class="list-group-item list-group-item-light"><a href="{% url 'transaction-create' parameter='Withdraw' %}">Withdraw</a></li>
-            </ul>
-          </p>
+
+    {% if user.is_authenticated %}
+        <div class="container">
+            <div class="col-md-8">
+                <canvas id="pie-chart"></canvas>
+            </div>
         </div>
-    </div>
-</div>
+
+        <div class="row">
+            <div class="col-md-8">
+                {% if transactions != None %}
+                    {% for transaction in transactions.transaction_list %}
+                    <article class="media content-section">
+                      <div class="media-body">
+                        <div class="article-metadata">
+                          <a class="mr-2" href="{% url 'transaction-detail' transaction.id %}">{{ transaction.t_type}} from {{transaction.source}}</a>
+                          <small class="text-muted">{{ transaction.date_posted|date:"F d, Y"}}</small>
+                            <small class="text-muted">{{ transactions.data }}</small>
+                        </div>
+                        <h2>
+                          <a class="article-title" href="{% url 'transaction-detail' transaction.id %}">${{ transaction.amount }}</a>
+                        </h2>
+                      </div>
+                    </article>
+                    {% endfor %}
+                {% endif %}
+            </div>
+            {% if user.is_authenticated %}
+                <div class="col-md-4">
+                    <div class="content-section">
+                      <h3>Create A New Transaction</h3>
+                      <p class='text-muted'>Add new transactions here.</p>
+                        <ul class="list-group">
+                        <li class="list-group-item list-group-item-light"><a href="{% url 'transaction-create' parameter='Deposit' %}">Deposit</a></li>
+                          <li class="list-group-item list-group-item-light"><a href="{% url 'transaction-create' parameter='Withdraw' %}">Withdraw</a></li>
+                        </ul>
+                    </div>
+                </div>
+            {% endif %}
+        </div>
+    {% else %}
+        <div class="row">
+            <div class="col-md-8">
+                <article class="media content-section">
+                  <div class="media-body">
+                    <div class="article-metadata">
+                        <h2>
+                          Welcome to Treat Yo Self, a Budgeting Website for your Poor Ass Needs
+                        </h2>
+                    </div>
+                      <p>Please Register or Log In to start.</p>
+                  </div>
+                </article>
+            </div>
+        </div>
+    {% endif %}
+    <script>
+        let config = {
+          type: 'pie',
+          data: {
+            datasets: [{
+              data: {{ transactions.data|safe }},
+              backgroundColor: [
+                '#696969', '#808080', '#A9A9A9', '#C0C0C0', '#D3D3D3'
+              ],
+              label: 'Money'
+            }],
+            labels: {{ transactions.labels|safe }}
+          },
+          options: {
+            responsive: true
+          }
+        };
+
+        window.onload = function() {
+          let ctx = document.getElementById('pie-chart').getContext('2d');
+          window.myPie = new Chart(ctx, config);
+        };
+
+    </script>
 {% endblock content %}
