--- a/budgeting/templates/budgeting/base.html
+++ b/budgeting/templates/budgeting/base.html
@@ -45,8 +45,7 @@
               <a class="nav-item nav-link" href="{% url 'budgeting-home'%}">Home</a>
               <a class="nav-item nav-link" href="{% url 'budgeting-about'%}">About</a>
                 {% if user.is_authenticated %}
-                    <a class="nav-item nav-link" href="{% url 'budgeting-about'%}">Transactions</a>
-                    <a class="nav-item nav-link" href="{% url 'budgeting-about'%}"></a>
+                    <a class="nav-item nav-link" href="{% url 'all-transactions'%}">Transactions</a>
                 {% endif %}
             </div>
             <!-- Navbar Right Side -->
