Pagination, home page
changed home page, added pagination to all transactions, changed datetime to date

--- a/budgeting/templates/budgeting/all_transactions.html
+++ b/budgeting/templates/budgeting/all_transactions.html
@@ -6,6 +6,13 @@
 
     {% if user.is_authenticated %}
         <div class="row">
+            <div class="col-md-8 display-3">
+                <h1>
+                    All Transactions
+                </h1>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-md-8">
                 {% if transactions != None %}
                     {% for transaction in transactions %}
@@ -26,6 +33,26 @@
                       </div>
                     </article>
                     {% endfor %}
+                    {% if is_paginated %}
+                        {% if page_obj.has_previous %}
+                            <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
+                            <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+                        {% endif %}
+
+                        {% for num in page_obj.paginator.page_range %}
+                            {% if page_obj.number == num %}
+                                <a class="btn btn-info mb-4" href="?page={{ num }}">{{ num }}</a>
+                            <!-- check if there are pages within 3 pages of current page-->
+                            {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+                                <a class="btn btn-outline-info mb-4" href="?page={{ num }}">{{ num }}</a>
+                            {% endif %}
+                        {% endfor %}
+
+                        {% if page_obj.has_next %}
+                            <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
+                            <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+                        {% endif %}
+                    {% endif %}
                 {% endif %}
             </div>
             <div class="col-md-4">
@@ -37,21 +64,6 @@
                       <li class="list-group-item list-group-item-light"><a href="{% url 'transaction-create' parameter='Withdraw' %}">Withdraw</a></li>
                     </ul>
                 </div>
-            </div>
-        </div>
-    {% else %}
-        <div class="row">
-            <div class="col-md-8">
-                <article class="media content-section">
-                  <div class="media-body">
-                    <div class="article-metadata">
-                        <h2>
-                          Welcome to Treat Yo Self, a Budgeting Website for your Poor Ass Needs
-                        </h2>
-                    </div>
-                      <p>Please Register or Log In to start.</p>
-                  </div>
-                </article>
             </div>
         </div>
     {% endif %}
