--- a/budgeting/templates/budgeting/base.html
+++ b/budgeting/templates/budgeting/base.html
@@ -51,7 +51,7 @@
               <a class="nav-item nav-link" href="{% url 'budgeting-home'%}">Home</a>
               <a class="nav-item nav-link" href="{% url 'budgeting-about'%}">About</a>
                 {% if user.is_authenticated %}
-                    <a class="nav-item nav-link" href="{% url 'all-transactions'%}">Transactions</a>
+                    <a class="nav-item nav-link" href="{% url 'all-transactions'%}">All-Transactions</a>
                 {% endif %}
             </div>
             <!-- Navbar Right Side -->
