--- a/budgeting/templates/budgeting/home.html
+++ b/budgeting/templates/budgeting/home.html
@@ -1,45 +1,54 @@
 {% extends "budgeting/base.html" %}
 <!-- ^ Uses the base template (base.html)-->
 {% block content %}
-<!-- This is a for loop-->
-<!-- double braces allows us to access a variable. We use dot syntax on python dictionary in html. -->
 
     {% if user.is_authenticated %}
-        <div class="text-center">
-            <div class="jumbotron" style="max-height: 300px;">
-                <div class="container">
-                    <h1 class="display-4">
-                        Total Amount
-                    </h1>
-                    <hr class="my-1">
-                    <h2 class="display-3">
-                        $1000
-                    </h2>
-                </div>
+        <!-- PLEASE CHANGE THE BACKGROUND COLOR OMG SO BAD -->
+        <div class="jumbotron text-center" style="background-color: #d3faff; max-height: 300px;">
+            <div class="container">
+                <h1 class="display-4">
+                    Total Amount
+                </h1>
+                <hr class="my-1">
+                <h2 class="display-3">
+                    $1000
+                </h2>
             </div>
-            <h3 class="display-4">
-               Spending
-            </h3>
-            {% if transactions.data|length == 0 %}
-                <div class="card" style="background-color: #ffb8b8; margin-left: 15%; margin-right: 15%; padding: 5%">
-                    <h4>
-                        You have not spent any money
-                    </h4>
-                </div>
-            {% else %}
-                <div class="container" style="padding-bottom:3%">
-                    <canvas id="pie-chart"></canvas>
-                </div>
-            {% endif %}
-            <h3 class="display-4">
-                5 Recent Transactions
-            </h3>
         </div>
-
-
-        <div class="row">
-            <div class="col-md-8">
-                {% if transactions != None %}
+        {% if transactions.transaction_list|length == 0 %}
+            <div class="jumbotron text-center" style="background-color: #d3faff; margin-left: 15%; margin-right: 15%; padding: 5%">
+                <h4 style="padding-bottom: 5%">
+                    Start By Creating a Transaction!
+                </h4>
+                <ul class="list-group">
+                  <li class="list-group-item list-group-item-light"><a href="{% url 'transaction-create' parameter='Deposit' %}">Deposit</a></li>
+                  <li class="list-group-item list-group-item-light"><a href="{% url 'transaction-create' parameter='Withdraw' %}">Withdraw</a></li>
+                </ul>
+            </div>
+        {% else %}
+            <div class="text-center">
+                <h3 class="display-4">
+                   Spending
+                </h3>
+                {% if transactions.data|length == 0 %}
+                    <div style="margin-left: 15%; margin-right: 15%; padding: 3%">
+                        <h4 class="card" style="background-color: #d3ffdf; padding: 3%">
+                            You have not spent any money (:
+                        </h4>
+                    </div>
+                {% else %}
+                    <div class="container" style="padding-bottom:3%">
+                        <canvas id="pie-chart"></canvas>
+                    </div>
+                {% endif %}
+            </div>
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="text-center">
+                        <h3 class="display-4">
+                            5 Recent Transactions
+                        </h3>
+                    </div>
                     {% for transaction in transactions.transaction_list %}
                         <article class="media content-section">
                           <div class="media-body">
@@ -57,19 +66,19 @@
                           </div>
                         </article>
                     {% endfor %}
-                {% endif %}
-            </div>
-            <div class="col-md-4">
-                <div class="content-section">
-                  <h3>Create A New Transaction</h3>
-                  <p class='text-muted'>Add new transactions here.</p>
-                    <ul class="list-group">
-                    <li class="list-group-item list-group-item-light"><a href="{% url 'transaction-create' parameter='Deposit' %}">Deposit</a></li>
-                      <li class="list-group-item list-group-item-light"><a href="{% url 'transaction-create' parameter='Withdraw' %}">Withdraw</a></li>
-                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <div class="content-section">
+                      <h3>Create A New Transaction</h3>
+                      <p class='text-muted'>Add new transactions here.</p>
+                        <ul class="list-group">
+                        <li class="list-group-item list-group-item-light"><a href="{% url 'transaction-create' parameter='Deposit' %}">Deposit</a></li>
+                          <li class="list-group-item list-group-item-light"><a href="{% url 'transaction-create' parameter='Withdraw' %}">Withdraw</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
+        {% endif %}
     {% else %}
         <div class="row">
             <div class="col-md-8">
