--- a/budgeting/templates/budgeting/home.html
+++ b/budgeting/templates/budgeting/home.html
@@ -34,7 +34,7 @@
     <li class="list-group-item list-group-item-light"><a
         href="{% url 'transaction-create' parameter='Deposit' %}">Deposit</a></li>
     <li class="list-group-item list-group-item-light"><a
-        href="{% url 'transaction-create' parameter='Withdraw' %}">Withdraw</a></li>
+        href="{% url 'transaction-create' parameter='Withdrawal' %}">Withdraw</a></li>
   </ul>
 </div>
 {% else %}
