--- a/budgeting/templates/budgeting/home.html
+++ b/budgeting/templates/budgeting/home.html
@@ -4,35 +4,47 @@
 
 {% if user.is_authenticated %}
 <!-- PLEASE CHANGE THE BACKGROUND COLOR OMG SO BAD -->
-<div class="jumbotron text-center" style="background-color: #d3faff;">
-  <div class="container">
+<div class="jumbotron container-fluid text-center" style="padding-top: 2%;padding-bottom: 2%;">
+
     {% if total.total == None %}
-    <h1 class="display-4"><a href="{% url 'total-create'%}">Enter your current balance</a></h1>
+      <h1 class="display-4"><a href="{% url 'total-create'%}">Enter your current balance</a></h1>
     {% else %}
     <!-- <h1><a href="{% url 'total-create'%}"></a></h1> -->
-    <h4>Current Balance:</h4>
-    <h2 class="display-2">${{total.total}}</h2>
+    <h3>Current Balance:</h3>
+    <h3 class="display-2">${{total.total}}</h3>
     <hr class="my-2">
     <div class="row" style="padding-top: 1%">
       {% if total.monthly_gain == None %}
-      <h4 class="col-md-4">This Month Gain: 0</h4>
+        <div class="col text-center">
+          <h4>This Month Gained:</h4>
+          <h1 style="color:limegreen">+ $0.00</h1>
+        </div>
       {% else %}
-      <h4 class="col-md-4">This Month Gain: {{total.monthly_gain}}</h4>
+          <div class="col text-center">
+            <h4>This Month Gained:</h4>
+            <h1 style="color:limegreen">+ ${{total.monthly_gain}}</h1>
+          </div>
       {% endif %}
       {% if total.monthly_spent == None %}
-      <h4 class="col-md-8">This Month Spent: 0</h4>
+          <div class="col text-center">
+            <h4>This Month Spent: </h4>
+            <h1 style="color:red">- $0.00</h1>
+          </div>
       {% else %}
-      <h4 class="col-md-8">This Month Spent: {{total.monthly_spent}}</h4>
+          <div class="col text-center">
+            <h4>This Month Spent: </h4>
+            <h1 style="color:red">- ${{total.monthly_spent}}</h1>
+          </div>
       {% endif %}
     </div>
     <!-- <a href="{% url 'total-create'%}">Amount gained this month: {{total.monthly_gain}}</a></p> -->
     <!-- <a href="{% url 'total-create'%}">Amount spent this month: {{total.monthly_spent}}</a> -->
     {% endif %}
-  </div>
+
 </div>
 {% if total.transaction_list|length == 0 or total.transaction_list == None %}
 {% if total.total != None %}
-<div class="jumbotron text-center" style="background-color: #d3faff; margin-left: 15%; margin-right: 15%; padding: 5%">
+<div class="jumbotron text-center" style="margin-left: 15%; margin-right: 15%; padding: 5%">
   <h4 style="padding-bottom: 5%">
     Start By Creating a Transaction!
   </h4>
@@ -64,7 +76,7 @@
 <div class="row">
   <div class="col-md-8">
     <div class="text-center">
-      <h3 class="display-4">
+      <h3 class="display-4" style="margin-bottom: 2%">
         5 Recent Transactions
       </h3>
     </div>
@@ -125,7 +137,7 @@
 </div>
 {% endif %}
 <script>
-  const colorScale = d3.interpolateRainbow;
+  const colorScale = d3.interpolateSinebow;
   let dataLength = {{ total.data| length }};
   const colorRangeInfo = {
     colorStart: 0,
